--- a/index.html
+++ b/index.html
@@ -1,50 +1,73 @@
 ﻿<!DOCTYPE html>
 <html>
-
-  <head>
-      <link rel="stylesheet" href="index.css">
-      <meta charset="utf-8">
-  </head>
-
-  <body>
-    <script src="index.js" type="text/javascript" defer></script>
-    <canvas id="canvas" width="800" height="600"></canvas>
-    <div id="table_1" class="table_1">
-        <p>Стол 1</p>
-        <input name="radio1" id="r_vin" type="radio">Виноград - 14$<br>
-        <input name="radio1" id="r_ban" type="radio">Банан - 26$<br>
-        <input name="radio1" id="r_arb" type="radio">Арбуз - 50$<br>
-        <input name="radio1" id="r_dra" type="radio">Драконий фрукт - 190$<br>
-        <input id="kol_monney1" type="number"><br>
-        <input id="button1" type="button" class="button1" value="ok">
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
+<title>Торговая лавка</title>
+<link href='index1.css' rel='stylesheet' type='text/css'>
+</head>
+<body style="background: rgb(129, 190, 192)">
+    <ul class="menudiv1">
+        <li>
+            <a href="https://acme-l.github.io/index.html" class="p1 action ">Игра</a>
+        </li>
+        <li class="menudiv2">
+            <nav>
+                <a class="p1 action hi22">Меню</a>
+                <a href="#screen" class="hidden p1 action ">Игровые экраны</a>
+                <a href="#rule" class="hidden p1 action ">Правила</a>
+                <a href="#me" class="hidden p1 action ">Об авторе</a>
+        </li>
+    </ul>
+    <div>
+        <img class="img11" src="image/title.png" style="width:99%;height:400px;" >
     </div>
-    <div id="table_2" class="table_1">
-        <p>Стол 2</p>
-        <input name="radio2" id="r_vin" type="radio">Виноград - 14$<br>
-        <input name="radio2" id="r_ban" type="radio">Банан - 26$<br>
-        <input name="radio2" id="r_arb" type="radio">Арбуз - 50$<br>
-        <input name="radio2" id="r_dra" type="radio">Драконий фрукт - 190$<br>
-        <input id="button2" type="button" class="button1" value="ok">
-        <input id="kol_monney2" type="number">
+    <a name="screen"></a>
+    <p class="p1 razdel ">Игровые экраны</p>
+    <div class="screendiv">
+        <img class='img1' src="image/Screenshot_1.png">
+        <img class='img1' src="image/Screenshot_2.png">
+        <img class='img1' src="image/Screenshot_3.png">
+    </div> 
+    <a name="rule"></a>
+    <p class="p1 razdel">Правила</p>
+    <div class="screendiv">
+        <div>
+            <p> Перед началом игры - укажите продаваемые товары и их цену.</p>
+            <img class='img1 img2' src="image/prav_1.png">
+        </div>
+        <div>
+            <p>Впустите покупателей, нажав на дверь.</p>
+            <div >
+                    <img class='img1 img3' src="image/prav_2.png">
+            </div>
+        </div>
     </div>
-    <p class="u_monney" id="u_monney">0$</p>
-    <img id="vinograd2" src="vinograd2.png" class="vinograd2">
-    <img id="banan" src="banan.png" class="vinograd2">
-    <img id="arbyz" src="arbyz.png" class="vinograd2">
-    <img id="drako" src="drako.png" class="vinograd2">
-    <div class="sec">
-        <p id="stopwatch"> 00:00:00.00 </p>
+    <div class="screendiv">
+    <div>
+        <p>Каждый 20 с лишним секунд ваши средства уменшатся на сумму налога, постепенно растущего.</p>
+        <div style="display:flex ;justify-content: center;">
+        <img class='img1 img4' src="image/prav_3.png"  >
+        </div>   
     </div>
-
-    <div class="victory" id="victory">
-    <p>Игра зеверщена</p>
-    Ваш рекорд: 
-    <p id="u_monney1"> </p>
-    <p id="stopwatch1" ></p>
-    
-
+    <div>
+        <p>Изменяйте товар на столах и эксперементируйтен с ценами, но имейте ввиду - слишком высокая цена отпугнет покупателя! Да и зачастую у людей просто нет денег...</p>
+        <div style="display:flex ;justify-content: center;">
+        <img class='img1 img4' src="image/prav_4.png"  >
+        </div>   
     </div>
-    </body>
-
-
+    </div>
+    <a name="me"></a>
+    <p class="p1 razdel">Об авторе</p>
+    <div class="screendiv">
+        <img class='img1 me' src="image/author.png"   >
+        <div>
+            <p>Name: <br><b>Ryzhoy Nicolay</b></p>
+            <p>Group: <br><b>MS-1</b></p>
+            <p>Facultet: <br><b>FAIS</b></p>
+            
+        </div>
+    </div>
+    <p>Курсовой проект. Предмет "ЛКС". Мои контакты: <a href="https://github.com/acme-l" style="text-decoration: none;">git.hub</a> и <a href="acme-l@mail.ru" style="text-decoration: none;">mail.ru</a>.</p>
+</body>
 </html>
