--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="background: rgb(129, 190, 192)">
     <ul class="menudiv1">
         <li>
-            <a href="https://acme-l.github.io/index.html" class="p1 action ">Игра</a>
+            <a href="https://acme-l.github.io/index1.html" class="p1 action ">Игра</a>
         </li>
         <li class="menudiv2">
             <nav>
